--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,10 @@
+* {box-sizing: border-box;}
+body{min-width:1280px;
+    max-width: 1920px;
+    margin:0 auto}
+#wrap {
+    ;
+}
 .top_banner {
     background:#0A46D7;
     display: flex;
@@ -104,7 +111,9 @@ main .main_banner #main_banner .swiper-wrapper  .swiper-slide .banner_slide a im
     font-weight:700;
     margin-bottom:24px;
 }
-.our_menu .our-menu-container .menu-title p {}
+.our_menu .our-menu-container .menu-title p {
+    color:#767676;
+}
 /* .our_menu .our-menu-container .bg {
     background-color: #F5F5F5;
     width: 1920px;
@@ -112,6 +121,7 @@ main .main_banner #main_banner .swiper-wrapper  .swiper-slide .banner_slide a im
     border: 3px solid red;
     position:absolute;
 } */
+ 
 .our_menu .our-menu-container .menu-card-wrap   {
     background-color:#f5f5f5 ;
     max-width: 1920px;
@@ -223,6 +233,8 @@ main .main_banner #main_banner .swiper-wrapper  .swiper-slide .banner_slide a im
 /* 3행 sale_menu 지금 가장 좋은 가격으로 만나는 널담 */
 .special_deal {
     margin:171px 206px;
+    position:relative;
+    
 }
 .special_deal .special_deal_wrap {}
 .special_deal .special_deal_wrap .special_deal_title {
@@ -235,26 +247,47 @@ main .main_banner #main_banner .swiper-wrapper  .swiper-slide .banner_slide a im
     margin-bottom: 21px;
 }
 .special_deal .special_deal_wrap .special_deal_title  p {
-    
+    color:#767676;
 }
-.special_deal .special_deal_wrap #special_deal_swiper {}
+.special_deal .special_deal_wrap #special_deal_swiper {
+    /* max-width: 1520px; */
+}
 .special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper {
     display: flex;
 }
-.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide {}
-.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container {}
-.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_img {
+.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide {
+    width:320px;
+    /* border:2px solid red; */
     
+}
+.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container {
+    
+    /* border:3px solid red; */
+
+}
+.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_img {
+    overflow: hidden;
+    transition: all 1s ease;
+    border-radius:10px 10px 0 0 ;
+}
+.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_img:hover img {
+    transform:scale(1.05);
+    border-radius:10px 10px 0 0 ;
 }
 .special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_img img{
     margin-bottom:20px;
+    width:100%;
     
+    display: block;
+    max-height:350px;
+   /*  border:3px solid red; */
 }
 .special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap {
     border:1px solid #C1C1C1;
     border-radius:0 0 20px 20px;
     padding:15px 30px;
     height:180px;
+    max-width:100%;
 }
 .special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_name {
     
@@ -276,6 +309,7 @@ main .main_banner #main_banner .swiper-wrapper  .swiper-slide .banner_slide a im
     display: inline-block;
     font-size:0.625rem ;
     font-weight: 500;
+    white-space: nowrap;
 }
 .special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon {
     display: flex;
@@ -292,12 +326,19 @@ main .main_banner #main_banner .swiper-wrapper  .swiper-slide .banner_slide a im
 .special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .special_deal_price span:nth-child(1) {
     font-size:1.25rem ;
     font-weight: 500;
+    color:#0A46D7;
 }
 .special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .special_deal_price span:nth-child(2) {
     font-size:1.25rem ;
 }
-.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .special_deal_price span {}
-.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .icon_wrap {}
+.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .special_deal_price span {
+    
+}
+.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .icon_wrap {
+    display: flex;
+    align-items: center;
+    gap:7px;
+}
 .special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .icon_wrap button {}
 .special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .icon_wrap button #whishlist_btn {}
 .special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .icon_wrap button #whishlist_btn img {}
@@ -313,4 +354,202 @@ main .main_banner #main_banner .swiper-wrapper  .swiper-slide .banner_slide a im
     display: inline-block;
     text-align: center;
     border-radius: 20px;
+}
+
+.special_deal_btn {
+    z-index: 30;
+    position:absolute;
+    top:50%;
+    display: flex;
+    transform: translateY(-50%);
+    justify-content: space-between;
+    width:100%;
+}
+#special_deal_swiper_prev {
+    left:-50px;
+}
+#special_deal_swiper_next {
+    right:-50px;
+}
+/* 4행 카테고리별 메뉴==================== */
+.best_product {
+    margin:171px 206px;
+    position:relative;
+    
+}
+.best_product .best_product_wrap {}
+.best_product .best_product_wrap .best_product_title {
+    text-align: center;
+    margin-bottom: 80px;
+}
+.best_product .best_product_wrap .best_product_title  h1 {
+    font-size: 2.438rem;
+    font-weight:800;
+    margin-bottom: 21px;
+}
+.best_product .best_product_wrap .best_product_title  p {
+    color:#767676;
+}
+
+/* 카테고리 */
+.best_product .best_product_wrap .category_btn {
+    display: flex;
+    justify-content: center;
+    gap:20px;
+    margin-bottom: 70px;;
+}
+.best_product .best_product_wrap .category_btn button{}
+.best_product .best_product_wrap .category_btn button span {
+    border:1px solid #0A46D7;
+    border-radius: 20px;
+    display: inline-block;
+    padding:10px 35px;
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 1;
+}
+.best_product .best_product_wrap #best_product_swiper {
+    /* max-width: 1520px; */
+}
+.best_product .best_productl_wrap #best_product_swiper .swiper-wrapper {
+    display: flex;
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide {
+    width:320px;
+    /* border:2px solid red; */
+    
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container {
+    
+    /* border:3px solid red; */
+
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_img {
+    overflow: hidden;
+    transition: all 1s ease;
+    border-radius:10px 10px 0 0 ;
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_img:hover img {
+    transform:scale(1.05);
+    border-radius:10px 10px 0 0 ;
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_img img{
+    margin-bottom:20px;
+    width:100%;
+    
+    display: block;
+    max-height:350px;
+   /*  border:3px solid red; */
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_info_wrap {
+    border:1px solid #C1C1C1;
+    border-radius:0 0 20px 20px;
+    padding:15px 30px;
+    height:180px;
+    max-width:100%;
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_info_wrap .best_product_name {
+    
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_info_wrap .best_product_name a {
+    font-size: 1.063rem;
+    font-weight:500;
+    
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_info_wrap .best_product_tag {
+    display:flex ;
+    gap:7px;
+    margin-top: 20px;
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_info_wrap .best_product_tag span {
+    border:1px solid #0A46D7;
+    border-radius: 20px;
+    padding:4px 13px;
+    display: inline-block;
+    font-size:0.625rem ;
+    font-weight: 500;
+    white-space: nowrap;
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_info_wrap .best_product_price_icon {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top:25px ;
+    
+    
+}
+.best_product .best_product #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_info_wrap .best_product_price_icon .best_product_price {
+    display: flex;
+    gap:7px;
+    border:3px solid red;
+    
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_info_wrap .best_product_price_icon .best_product_price span:nth-child(1) {
+    font-size:1.25rem ;
+    font-weight: 500;
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_info_wrap .best_product_price_icon .best_product_price span:nth-child(2) {
+    font-size:1.25rem ;
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_info_wrap .best_product_price_icon .best_product_price span {}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_info_wrap .best_product_price_icon .icon_wrap {
+    display: flex;
+    align-items: center;
+    gap:7px;
+}
+.best_product .best_product_wrap #best_product_swiper .swiper-wrapper .swiper-slide .best_product_container .best_product_info_wrap .best_product_price_icon .icon_wrap button {}
+.best_product .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .icon_wrap button #whishlist_btn {}
+.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .icon_wrap button #whishlist_btn img {}
+.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .icon_wrap button #cart_btn {}
+.special_deal .special_deal_wrap #special_deal_swiper .swiper-wrapper .swiper-slide .special_deal_container .special_deal_info_wrap .special_deal_price_icon .icon_wrap button #cart_btn img {}
+.best_product .more_btn {
+    margin:0 auto;
+}
+.best_product .more_btn a {
+    font-size: 1.25rem;
+    border:1px solid #0A46D7;
+    padding:10px 80px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 20px;
+}
+
+.best_product_btn {
+    z-index: 30;
+    position:absolute;
+    top:50%;
+    display: flex;
+    transform: translateY(-50%);
+    justify-content: space-between;
+    width:100%;
+}
+#best_product_swiper_prev {
+    left:-50px;
+}
+#best_product_swiper_next {
+    right:-50px;
+}
+
+/* 5행=================================================== */
+.new_product {
+    padding:197px 275px;
+}
+.new_product .new_product_wrap {}
+.new_product .new_product_wrap h1 {
+    font-size: 2.438rem;
+    font-weight: 700;
+    margin-bottom:21px;
+}
+.new_product .new_product_wrap p {}
+.new_product .new_product_wrap h3 {
+    font-size: 1.438rem;
+    margin-bottom: 7px;
+}
+.new_product .new_product_wrap >p {
+    font-size: 1.125rem;
+    color:#767676;
+}
+.new_product .new_product_wrap p:nth-child(2) {}
+.new_product .new_product_wrap .container {
+    display: flex;
 }
