--- a/styles/index.css
+++ b/styles/index.css
@@ -38,8 +38,11 @@ body{min-width:1280px;
 }
 header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     padding:0 50px;
+    /* border:2px solid violet; */
+    position: relative;
 }
 header h1 {
    
@@ -47,12 +50,25 @@ header h1 {
 header h1 a {}
 header nav  {
     display: flex;
+    justify-content: center;
+    flex:1;
+    /* border:1px solid red; */
+    /* max-width: 1200px; */
+    position:absolute;
+    left:50%;
+    transform: translateX(-50%);
 }
 header nav .gnb {
-    display: flex;
+    /* display: flex; */
     padding:7px 0;
     align-items: center;
     gap:70px;
+    display: flex;
+    max-width: 1200px;
+    margin: 0 auto;
+    /* border:1px solid blue; */
+    justify-content: center;
+    /* grid-template-columns: repeat(4, 1fr); */
 }
 header nav .gnb li {position: relative;}
 header nav .gnb li a {
@@ -105,26 +121,68 @@ header .right_menu a:last-child span {
 }
 
 /* lnb 서브 메뉴 */
+.gnb, .gnb li,.lnb-container, .lnb-container ul, .lnb-container li {
+    margin: 0;
+    padding: 0;
+}
 .lnb_wrap {
     display: none; position:absolute;
-    top:100px;
-    left:0;
+    top:50px;
+    left:50%;
+    transform: translateX(-50%);
+    width:100%;
     background: #fff;
     width:100%;
     z-index:800;
+    border-top:1px solid #6E5F5F;
+    padding:0 50px;
+}
+.gnb {
+    max-width: 1200px;
+    margin: 0 auto;
 
+}
+.lnb-col h4 {
+    position: absolute;
+    left:-9999px;
+}
+.lnb_bg {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding:12px 0;
+    border:2px solid yellow;
 }
 .lnb-container {
     display: flex;
-    /* display: grid;
-    grid-template-columns: repeat(4, 1fr); */
-    gap:50px;
-    justify-content: center;
-    align-items: center;
-    border-top:1px solid #6E5F5F;
+    width:100%;
+    gap:0px;
+    /* justify-content: center;
+    align-items: center */;
+    border:2px solid green;
+    max-width: 600px;
+    margin: 0 auto;
+    padding:0;
+    list-style: none;
+    justify-content: space-between;
 }
-.lnb-group {
-    margin:0; padding:0; 
+.lnb-col {
+    margin:0; padding:0; list-style: none;
+    border-left:2px solid red;
+    flex:0 0 calc((100% - 3 * 40px) / 4);
+    padding:0 10px;
+    /* max-width:500px; */
+    box-sizing: border-box;
+    max-width:150px;
+    background: #57C2E2;
+}
+.lnb-col ul {
+    margin:0;
+    padding:0;
+    list-style:none;
+    background: yellow;
+}
+.lnb-col li {
+    margin-bottom: 10px;
 }
 .lnb-group:empty {
     pointer-events: none;
@@ -144,6 +202,7 @@ nav:hover + .lnb_wrap,
     /* background-color:aqua; */ height:50px;
     /* 글자가 올라간 건 라인헤이트나 패딩 탑을 줘서 조절해주자 */
     padding-top: 17px;
+    text-align: center;
 }
 .lnb_depth1 li:hover a {
    color:#57C2E2;
@@ -214,7 +273,7 @@ main .main_banner #main_banner .swiper-wrapper  .swiper-slide .banner_slide a im
 .our_menu .our-menu-container .menu-card-wrap   {
     background-color:#f5f5f5 ;
     max-width: 1920px;
-    height:900px;
+    height:800px;
     display: flex;
     justify-content:center;
     gap:32px;
